<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="view_model"
            type="com.example.myapplication1.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/GreenBlue"
        tools:context=".RegisterActivity">


        <TextView
            android:id="@+id/tv_heading"
            style="@style/Register_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="30dp"
            android:text="@string/reg_heading"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            tools:ignore="TextContrastCheck" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/tv_heading"
            tools:layout_editor_absoluteX="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/inner_constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Name_layout"
                    style="@style/Login_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:layout_constraintEnd_toEndOf="@id/inner_constraint"
                    app:layout_constraintStart_toStartOf="@id/inner_constraint"
                    app:layout_constraintTop_toTopOf="@id/inner_constraint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_Name"
                        style="@style/Login_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/hint_name"
                        android:inputType="text"
                        android:text="@={view_model.name}"
                        android:textColorHint="#0C9AB3" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Email_layout"
                    style="@style/Login_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    app:layout_constraintEnd_toEndOf="@id/inner_constraint"
                    app:layout_constraintStart_toStartOf="@id/inner_constraint"
                    app:layout_constraintTop_toBottomOf="@id/Name_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        style="@style/Login_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/hint_email"
                        android:text="@={view_model.email}"
                        android:inputType="textEmailAddress"
                        android:textColorHint="#00838F"
                        tools:layout_editor_absoluteX="44dp"
                        tools:layout_editor_absoluteY="320dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_layout"
                    style="@style/Login_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    app:layout_constraintEnd_toEndOf="@id/inner_constraint"
                    app:layout_constraintStart_toStartOf="@id/inner_constraint"
                    app:layout_constraintTop_toBottomOf="@id/Email_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_phone"
                        style="@style/Login_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/hint_phone"
                        android:text="@={view_model.phone}"
                        android:inputType="phone"
                        android:textColorHint="#0E8095" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    style="@style/Login_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    app:layout_constraintEnd_toEndOf="@id/inner_constraint"
                    app:layout_constraintStart_toStartOf="@id/inner_constraint"
                    app:layout_constraintTop_toBottomOf="@id/phone_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        style="@style/Login_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/hint_password"
                        android:text="@={view_model.password}"
                        android:inputType="textEmailAddress"
                        android:textColorHint="#00838F" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/button"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/button"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/inner_constraint"
                    app:layout_constraintTop_toBottomOf="@id/password_layout"
                    app:layout_constraintVertical_bias="1.0" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="20dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView7"
            style="@style/Textview_small_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/use_other_methods"
            android:textColor="#5D4037"
            app:layout_constraintBottom_toTopOf="@+id/imageView5"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/white_line"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/white_line"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/google_icon"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:srcCompat="@drawable/icon5"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/facebook_icon"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:srcCompat="@drawable/icon4" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="205dp"
            android:layout_height="194dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/background_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/photo1"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_medium_text"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>